--- a/html/src/localization/zh-CN/en.json
+++ b/html/src/localization/zh-CN/en.json
@@ -103,7 +103,7 @@
             "rename_tooltip": "重新命名",
             "clear_tooltip": "清除",
             "delete_tooltip": "删除",
-            "unavailable_tooltip": "Unavailable",
+            "unavailable_tooltip": "不可用",
             "private": "Private",
             "sort_by": "Sort By"
         },
@@ -142,7 +142,7 @@
                 "two_factor_enabled": "已启用",
                 "two_factor_disabled": "已停用",
                 "logout": "登出账户",
-                "manage_gallery_icon": "Manage Photos/Icons/Emojis",
+                "manage_gallery_icon": "管理上传的图片/图标/表情",
                 "export_friend_list": "导出好友列表",
                 "export_own_avatars": "导出自己创建的模型",
                 "discord_names": "查看好友的Discord 名称",
@@ -215,11 +215,11 @@
                     "resource_load": "显示世界内网络资源的加载详情"
                 },
                 "automation": {
-                    "header": "Automation",
-                    "auto_state_change": "Auto Status Change",
-                    "auto_state_change_tooltip": "Automatically change status when there are other people in the instance (Alone / Company)",
-                    "auto_state_change_off": "Off",
-                    "auto_state_change_active_or_ask_me": "Active / Ask Me",
+                    "header": "自动化",
+                    "auto_state_change": "自动化状态切换",
+                    "auto_state_change_tooltip": "当房间中有其他人时自动切换状态 (独自一人 / 和其他人在一起时) 如果你不知道这是什么，保持默认关闭即可",
+                    "auto_state_change_off": "关闭",
+                    "auto_state_change_active_or_ask_me": "在线 / 询问我",
                     "auto_state_change_active_or_busy": "Active / Busy",
                     "auto_state_change_join_me_or_ask_me": "Join Me / Ask Me",
                     "auto_state_change_join_me_or_busy": "Join Me / Busy",
@@ -445,7 +445,7 @@
                         "avatar_cache": "模型缓存：",
                         "group_cache": "群组信息缓存:",
                         "avatar_name_cache": "模型名称缓存：",
-                        "instance_cache": "Instance cache:",
+                        "instance_cache": "房间信息缓存:",
                         "clear_cache": "清除缓存",
                         "auto_clear_cache": "自动清除缓存",
                         "download_history": "下载记录",
@@ -508,7 +508,7 @@
         "online": "在线",
         "active": "活跃中",
         "offline": "离线",
-        "pending_offline": "Pending Offline"
+        "pending_offline": "可能离线"
     },
     "dialog": {
         "user": {
@@ -562,11 +562,11 @@
                 "header": "信息",
                 "launch_invite_tooltip": "启动 / 邀请",
                 "self_invite_tooltip": "自我邀请",
-                "refresh_instance_info": "Refresh Instance Info",
-                "instance_queue": "Queue:",
-                "instance_users": "Users:",
-                "instance_game_version": "Game Version:",
-                "instance_queuing_enabled": "Queuing Enabled",
+                "refresh_instance_info": "刷新房间信息",
+                "instance_queue": "在等待队列的玩家:",
+                "instance_users": "房间用户:",
+                "instance_game_version": "游戏版本：",
+                "instance_queuing_enabled": "等待队列已开启",
                 "instance_creator": "房间建立者",
                 "note": "VRChat 备注",
                 "note_placeholder": "点击添加备注",
@@ -617,8 +617,8 @@
                     "popularity": "Popularity"
                 },
                 "order": {
-                    "descending": "Descending",
-                    "ascending": "Ascending"
+                    "descending": "降序排序",
+                    "ascending": "顺序排序"
                 }
             },
             "favorite_worlds": {
@@ -641,7 +641,7 @@
             "tags": {
                 "public": "公开",
                 "private": "私人",
-                "avatar_scaling_disabled": "Avatar Scaling Disabled",
+                "avatar_scaling_disabled": "已关闭模型缩放功能",
                 "future_proofing": "Future Proofing",
                 "labs": "社区实验室",
                 "cache": "缓存",
@@ -653,7 +653,7 @@
             },
             "actions": {
                 "delete_cache_tooltip": "从缓存中删除世界",
-                "favorites_tooltip": "Favorites",
+                "favorites_tooltip": "最爱栏",
                 "refresh": "刷新",
                 "new_instance": "创建新房间",
                 "make_home": "设为出生点",
@@ -678,14 +678,14 @@
                 "private_count": "私人 {count}",
                 "capacity_count": "玩家上限 {count} ({max})",
                 "self_invite_tooltip": "自我邀请",
-                "refresh_instance_info": "Refresh Instance Info",
+                "refresh_instance_info": "重新整理房间资讯",
                 "instance_full": "房间已满",
                 "instance_creator": "房间建立者"
             },
             "info": {
                 "header": "信息",
-                "memo": "Memo",
-                "memo_placeholder": "Click to add a memo",
+                "memo": "备注",
+                "memo_placeholder": "点击此处添加备注",
                 "id": "世界 ID",
                 "id_tooltip": "复制到剪贴板",
                 "copy_id": "复制 ID",
@@ -804,7 +804,7 @@
             },
             "info": {
                 "header": "信息",
-                "instances": "Instances",
+                "instances": "房间列表",
                 "announcement": "公告",
                 "instance_full": "房间已满",
                 "rules": "规则",
@@ -839,9 +839,9 @@
                     "everyone": "所有人",
                     "users_with_no_role": "没有身份组的成员"
                 },
-                "unsubscribed_announcements": "Unsubscribed from announcements",
-                "visibility": "Visibility:",
-                "representing": "Representing"
+                "unsubscribed_announcements": "不接收公告通知",
+                "visibility": "可见性:",
+                "representing": "展示状态"
             },
             "gallery": {
                 "header": "相册"
@@ -966,7 +966,7 @@
             "content_horror": "Horror",
             "content_gore": "Gore",
             "content_violence": "Violence",
-            "content_adult": "Adult",
+            "content_adult": "包含成人内容",
             "content_sex": "Sexual",
             "cancel": "取消",
             "save": "保存"
@@ -1025,7 +1025,7 @@
         "notification_position": {
             "header": "通知位置",
             "description": "选择通知位置",
-            "ok": "OK"
+            "ok": "确定"
         },
         "shared_feed_filters": {
             "notification": "通知筛选器",
@@ -1169,11 +1169,11 @@
             "description": "Recommended image size: 1200x900px (4:3)",
             "gallery": "相册",
             "icons": "图标",
-            "emojis": "Emojis",
+            "emojis": "Emojis(表情符号)",
             "refresh": "刷新",
             "upload": "上传",
             "clear": "清除",
-            "emoji_animation_styles": "Animation Styles"
+            "emoji_animation_styles": "动画样式"
         },
         "change_content_image": {
             "avatar": "更改模型图片",
@@ -1212,7 +1212,7 @@
             "header": "设置主密码",
             "password_placeholder": "输入新密码",
             "re_input_placeholder": "确认密码",
-            "ok": "OK"
+            "ok": "确定"
         },
         "screenshot_metadata": {
             "header": "屏幕截图元数据查看器",
@@ -1268,7 +1268,7 @@
             "header": "直接打开",
             "description": "输入玩家链接或玩家 ID (UUID)",
             "cancel": "取消",
-            "ok": "OK",
+            "ok": "确定",
             "input_error": "需要玩家链接 / 玩家 ID",
             "message": {
                 "error": "无效的链接或 ID"
@@ -1278,14 +1278,14 @@
             "header": "直接打开",
             "description": "输入玩家名称",
             "cancel": "取消",
-            "ok": "OK",
+            "ok": "确定",
             "input_error": "需要玩家名称"
         },
         "direct_access_world_id": {
             "header": "直接打开",
             "description": "输入世界链接或世界 ID (UUID)",
             "cancel": "取消",
-            "ok": "OK",
+            "ok": "确定",
             "input_error": "需要世界链接 / 世界 ID",
             "message": {
                 "error": "无效的链接或 ID"
@@ -1295,7 +1295,7 @@
             "header": "直接打开",
             "description": "输入模型链接或模型 ID (UUID)",
             "cancel": "取消",
-            "ok": "OK",
+            "ok": "确定",
             "input_error": "需要模型链接 / 模型 ID",
             "message": {
                 "error": "无效的链接或 ID"
@@ -1305,7 +1305,7 @@
             "header": "直接打开",
             "description": "输入玩家 / 世界 / 房间 / 模型链接 或 唯一ID (UUID)",
             "cancel": "取消",
-            "ok": "OK",
+            "ok": "确定",
             "input_error": "需要链接或 ID",
             "message": {
                 "error": "无效的链接或 ID"
@@ -1315,21 +1315,21 @@
             "header": "通知显示时间",
             "description": "输入秒数",
             "cancel": "取消",
-            "ok": "OK",
+            "ok": "确定",
             "input_error": "请输入有效的秒数"
         },
         "overlay_message_timeout": {
             "header": "消息叠加层显示时间",
             "description": "输入秒数",
             "cancel": "取消",
-            "ok": "OK",
+            "ok": "确定",
             "input_error": "请输入有效的秒数"
         },
         "rename_avatar": {
             "header": "重命名模型",
             "description": "输入模型名称",
             "cancel": "取消",
-            "ok": "OK",
+            "ok": "确定",
             "input_error": "请输入有效的名称",
             "message": {
                 "success": "已重新命名模型"
@@ -1339,7 +1339,7 @@
             "header": "更改模型描述",
             "description": "输入模型描述",
             "cancel": "取消",
-            "ok": "OK",
+            "ok": "确定",
             "input_error": "请输入有效的描述",
             "message": {
                 "success": "已更改模型描述"
@@ -1349,7 +1349,7 @@
             "header": "重新命名世界",
             "description": "输入世界名称",
             "cancel": "取消",
-            "ok": "OK",
+            "ok": "确定",
             "input_error": "请输入有效的名称",
             "message": {
                 "success": "已重新命名世界"
@@ -1359,7 +1359,7 @@
             "header": "更改世界描述",
             "description": "输入世界描述",
             "cancel": "取消",
-            "ok": "OK",
+            "ok": "确定",
             "input_error": "请输入有效的描述",
             "message": {
                 "success": "已更改世界描述"
@@ -1369,7 +1369,7 @@
             "header": "更改世界最大人数",
             "description": "Enter world maximum capacity (hard cap), Max: 80",
             "cancel": "取消",
-            "ok": "OK",
+            "ok": "确定",
             "input_error": "请输入有效的人数",
             "message": {
                 "success": "已更改世界最大人数"
@@ -1389,7 +1389,7 @@
             "header": "更改 YouTube 预览",
             "description": "输入世界 YouTube 预览",
             "cancel": "取消",
-            "ok": "OK",
+            "ok": "确定",
             "input_error": "请输入有效的 Youtube 链接",
             "message": {
                 "error": "无效的 Youtube 链接",
@@ -1407,21 +1407,21 @@
             "header": "玩家超时阀值",
             "description": "输入秒数（预设：3）",
             "cancel": "取消",
-            "ok": "OK",
+            "ok": "确定",
             "input_error": "请输入有效的秒数"
         },
         "auto_clear_cache": {
             "header": "VRCX 缓存清除间隔",
             "description": "输入小时数，较大的数值可能会影响性能 （默认：24，关闭：0）",
             "cancel": "取消",
-            "ok": "OK",
+            "ok": "确定",
             "input_error": "请输入有效的小时数"
         },
         "new_local_favorite_group": {
             "header": "新增收藏夹",
             "description": "输入收藏夹名称",
             "cancel": "取消",
-            "ok": "OK",
+            "ok": "确定",
             "input_error": "请输入有效的名称",
             "message": {
                 "error": "名称为 {name} 的收藏夹已存在"
