--- a/html/src/localization/zh-TW/en.json
+++ b/html/src/localization/zh-TW/en.json
@@ -25,7 +25,7 @@
                 "password": "密碼",
                 "saveCredentials": "儲存登入資料",
                 "devEndpoint": "開發介面",
-                "endpoint": "Endpoint",
+                "endpoint": "終端節點（Endpoint）",
                 "websocket": "WebSocket"
             }
         },
@@ -92,8 +92,8 @@
             "avatars": {
                 "header": "角色"
             },
-            "bulk_unfavorite_mode": "Bulk Unfavorite Mode",
-            "bulk_unfavorite_selection": "Bulk Unfavorite Selection",
+            "bulk_unfavorite_mode": "批次解除好友",
+            "bulk_unfavorite_selection": "批次解除已選擇的好友",
             "refresh_tooltip": "重新整理所有收藏",
             "export": "匯出",
             "import": "匯入",
@@ -104,7 +104,7 @@
             "clear_tooltip": "清除",
             "delete_tooltip": "刪除",
             "unavailable_tooltip": "Unavailable",
-            "private": "Private",
+            "private": "私人",
             "sort_by": "Sort By"
         },
         "friend_log": {
@@ -142,7 +142,7 @@
                 "two_factor_enabled": "已啟用",
                 "two_factor_disabled": "已停用",
                 "logout": "登出",
-                "manage_gallery_icon": "Manage Photos/Icons/Emojis",
+                "manage_gallery_icon": "管理相簿 / 圖示 / 表情符號",
                 "export_friend_list": "匯出好友列表",
                 "export_own_avatars": "匯出私有角色",
                 "discord_names": "Discord 名稱",
@@ -215,15 +215,15 @@
                     "resource_load": "Udon 資源載入紀錄"
                 },
                 "automation": {
-                    "header": "Automation",
-                    "auto_state_change": "Auto Status Change",
-                    "auto_state_change_tooltip": "Automatically change status when there are other people in the instance (Alone / Company)",
-                    "auto_state_change_off": "Off",
-                    "auto_state_change_active_or_ask_me": "Active / Ask Me",
-                    "auto_state_change_active_or_busy": "Active / Busy",
-                    "auto_state_change_join_me_or_ask_me": "Join Me / Ask Me",
-                    "auto_state_change_join_me_or_busy": "Join Me / Busy",
-                    "auto_state_change_ask_me_or_busy": "Ask Me / Busy"
+                    "header": "自動化",
+                    "auto_state_change": "自動狀態變更",
+                    "auto_state_change_tooltip": "當房間中有其他玩家時候自動更改狀態(單獨/同伴)",
+                    "auto_state_change_off": "關閉",
+                    "auto_state_change_active_or_ask_me": "上線 / 詢問我",
+                    "auto_state_change_active_or_busy": "上線 / 忙碌",
+                    "auto_state_change_join_me_or_ask_me": "加入我 / 詢問我",
+                    "auto_state_change_join_me_or_busy": "加入我 / 忙碌",
+                    "auto_state_change_ask_me_or_busy": "詢問我 / 忙碌"
                 },
                 "legal_notice": {
                     "header": "法律聲明",
@@ -233,7 +233,7 @@
                     "open_source_software_notice": "開放原始碼軟體授權條款"
                 },
                 "contributors": {
-                    "header": "Contributors"
+                    "header": "貢獻者"
                 }
             },
             "appearance": {
@@ -445,7 +445,7 @@
                         "avatar_cache": "角色快取：",
                         "group_cache": "群組快取：",
                         "avatar_name_cache": "角色名稱快取：",
-                        "instance_cache": "Instance cache:",
+                        "instance_cache": "房間緩存:",
                         "clear_cache": "清除快取",
                         "auto_clear_cache": "自動清除快取",
                         "download_history": "下載紀錄",
@@ -562,11 +562,11 @@
                 "header": "資訊",
                 "launch_invite_tooltip": "啟動 / 邀請",
                 "self_invite_tooltip": "自我邀請",
-                "refresh_instance_info": "Refresh Instance Info",
-                "instance_queue": "Queue:",
-                "instance_users": "Users:",
-                "instance_game_version": "Game Version:",
-                "instance_queuing_enabled": "Queuing Enabled",
+                "refresh_instance_info": "重新整理房間資訊",
+                "instance_queue": "佇列：",
+                "instance_users": "玩家:",
+                "instance_game_version": "遊戲版本:",
+                "instance_queuing_enabled": "排隊開啟",
                 "instance_creator": "房間建立者",
                 "note": "備註",
                 "note_placeholder": "點擊新增備註",
@@ -590,10 +590,10 @@
                 "avatar_cloning_allow": "允許",
                 "avatar_cloning_deny": "不允許",
                 "home_location": "家點",
-                "id": "User ID",
-                "id_tooltip": "Copy to clipboard",
-                "copy_id": "Copy ID",
-                "copy_url": "Copy URL",
+                "id": "玩家 ID",
+                "id_tooltip": "複製到剪貼簿",
+                "copy_id": "複製 ID",
+                "copy_url": "複製連結",
                 "copy_display_name": "Copy DisplayName",
                 "accuracy_notice": "本地資料庫的資料可能不精確",
                 "instance_full": "已滿"
@@ -641,7 +641,7 @@
             "tags": {
                 "public": "公開",
                 "private": "私人",
-                "avatar_scaling_disabled": "Avatar Scaling Disabled",
+                "avatar_scaling_disabled": "角色縮放關閉",
                 "future_proofing": "Future Proofing",
                 "labs": "社區實驗室",
                 "cache": "快取",
@@ -653,7 +653,7 @@
             },
             "actions": {
                 "delete_cache_tooltip": "從快取中刪除世界",
-                "favorites_tooltip": "Favorites",
+                "favorites_tooltip": "最愛欄",
                 "refresh": "重新整理",
                 "new_instance": "新房間",
                 "make_home": "設為家點",
@@ -678,14 +678,14 @@
                 "private_count": "私人 {count}",
                 "capacity_count": "玩家上限 {count} ({max})",
                 "self_invite_tooltip": "自我邀請",
-                "refresh_instance_info": "Refresh Instance Info",
+                "refresh_instance_info": "重新整理房間資訊",
                 "instance_full": "已滿",
                 "instance_creator": "房間建立者"
             },
             "info": {
                 "header": "資訊",
-                "memo": "Memo",
-                "memo_placeholder": "Click to add a memo",
+                "memo": "備忘錄",
+                "memo_placeholder": "點擊新增備忘錄",
                 "id": "世界 ID",
                 "id_tooltip": "複製到剪貼簿",
                 "copy_id": "複製 ID",
@@ -721,11 +721,11 @@
                 "fallback": "備用",
                 "future_proofing": "Future Proofing",
                 "cache": "快取",
-                "content_horror": "Horror",
-                "content_gore": "Gore",
-                "content_violence": "Violence",
-                "content_adult": "Adult",
-                "content_sex": "Sexual"
+                "content_horror": "恐怖",
+                "content_gore": "血腥",
+                "content_violence": "暴力",
+                "content_adult": "成人",
+                "content_sex": "色情"
             },
             "labels": {
                 "public": "（公開）",
@@ -761,7 +761,7 @@
                 "last_updated": "最後更新",
                 "version": "版本",
                 "platform": "平台",
-                "memo": "Memo",
+                "memo": "備註",
                 "memo_placeholder": "Click to add a memo"
             },
             "json": {
@@ -804,7 +804,7 @@
             },
             "info": {
                 "header": "資訊",
-                "instances": "Instances",
+                "instances": "房間",
                 "announcement": "公告",
                 "instance_full": "已滿",
                 "rules": "規則",
@@ -839,7 +839,7 @@
                     "everyone": "所有人",
                     "users_with_no_role": "沒有身分的玩家"
                 },
-                "unsubscribed_announcements": "Unsubscribed from announcements",
+                "unsubscribed_announcements": "取消訂閱公告",
                 "visibility": "Visibility:",
                 "representing": "Representing"
             },
@@ -904,7 +904,7 @@
             "instance_creator": "房間建立者",
             "instance_creator_placeholder": "選擇玩家",
             "group_placeholder": "選擇群組",
-            "role_placeholder": "Choose Roles",
+            "role_placeholder": "選擇身分",
             "group_id": "群組 ID",
             "location": "地點",
             "url": "連結",
@@ -912,11 +912,11 @@
             "self_invite": "自我邀請",
             "invite": "邀請",
             "launch": "啟動",
-            "create_instance": "Create Instance",
-            "queueEnabled": "Queue",
-            "normal": "Normal",
-            "group": "Group",
-            "roles": "Roles"
+            "create_instance": "建立房間",
+            "queueEnabled": "排隊",
+            "normal": "一般",
+            "group": "群組",
+            "roles": "身分"
         },
         "launch_options": {
             "header": "啟動選項",
@@ -963,26 +963,26 @@
             "enable_debugging": "為其他人啟用世界偵錯",
             "author_tags": "Author Tags (comma separated)",
             "content_tags": "Content Warning Tags",
-            "content_horror": "Horror",
-            "content_gore": "Gore",
-            "content_violence": "Violence",
-            "content_adult": "Adult",
-            "content_sex": "Sexual",
+            "content_horror": "恐怖",
+            "content_gore": "血腥",
+            "content_violence": "暴力",
+            "content_adult": "成人",
+            "content_sex": "色情",
             "cancel": "取消",
             "save": "儲存"
         },
         "set_avatar_tags": {
             "header": "Set Avatar Tags",
             "content_tags": "Content Warning Tags",
-            "content_horror": "Horror",
-            "content_gore": "Gore",
-            "content_violence": "Violence",
-            "content_adult": "Adult",
-            "content_sex": "Sexual",
-            "select_all": "Select All",
-            "select_none": "Select None",
-            "cancel": "Cancel",
-            "save": "Save"
+            "content_horror": "恐怖",
+            "content_gore": "血腥",
+            "content_violence": "暴力",
+            "content_adult": "成人",
+            "content_sex": "色情",
+            "select_all": "全選",
+            "select_none": "取消選取",
+            "cancel": "取消",
+            "save": "儲存"
         },
         "download_history": {
             "header": "下載紀錄",
@@ -1025,7 +1025,7 @@
         "notification_position": {
             "header": "通知位置",
             "description": "選擇通知位置",
-            "ok": "OK"
+            "ok": "確定"
         },
         "shared_feed_filters": {
             "notification": "通知篩選器",
@@ -1169,11 +1169,11 @@
             "description": "Recommended image size: 1200x900px (4:3)",
             "gallery": "相簿",
             "icons": "圖示",
-            "emojis": "Emojis",
+            "emojis": "表情符號",
             "refresh": "重新整理",
             "upload": "上傳",
             "clear": "清除",
-            "emoji_animation_styles": "Animation Styles"
+            "emoji_animation_styles": "動畫樣式"
         },
         "change_content_image": {
             "avatar": "變更角色圖片",
@@ -1212,7 +1212,7 @@
             "header": "需要設定主密碼",
             "password_placeholder": "輸入新密碼",
             "re_input_placeholder": "確認密碼",
-            "ok": "OK"
+            "ok": "確定"
         },
         "screenshot_metadata": {
             "header": "螢幕截圖詳細資料",
@@ -1244,7 +1244,7 @@
         "email_otp": {
             "header": "雙重認證",
             "description": "輸入寄送到電子信箱的數字代碼",
-            "resend": "Resend Email",
+            "resend": "重新發送郵件",
             "verify": "驗證",
             "input_placeholder": "代碼",
             "input_error": "無效的代碼"
@@ -1378,7 +1378,7 @@
         "change_world_recommended_capacity": {
             "header": "Change Recommended Capacity",
             "description": "Enter world recommended capacity (soft cap)",
-            "cancel": "Cancel",
+            "cancel": "取消",
             "ok": "OK",
             "input_error": "Valid number is required",
             "message": {
